k8s/commerce-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commerce-gateway
  labels:
    app: commerce-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commerce-gateway
  template:
    metadata:
      labels:
        app: commerce-gateway
    spec:
      containers:
      - name: commerce-gateway
        image: somakimura/commerce-gateway-service:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
