k8s/commerce-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commerce-gateway-service
spec:
  selector:
    app: commerce-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
